--- a/Node1/Debug/Makefile
+++ b/Node1/Debug/Makefile
@@ -40,16 +40,17 @@ C_SRCS +=  \
 ../ADC.c \
 ../CAN.c \
 ../CAN_joystick.c \
+../fsm.c \
 ../joystick.c \
 ../main.c \
 ../MCP2515.c \
-../Memory.c \
-../fsm.c \
+../memory.c \
 ../OLED.c \
-../Pong.c \
+../pong.c \
 ../SPI.c \
-../Usart_Driver.c \
-../Utilities.c
+../test.c \
+../USART.c \
+../utilities.c
 
 
 PREPROCESSING_SRCS += 
@@ -62,65 +63,69 @@ OBJS +=  \
 ADC.o \
 CAN.o \
 CAN_joystick.o \
+fsm.o \
 joystick.o \
 main.o \
 MCP2515.o \
-Memory.o \
-fsm.o \
+memory.o \
 OLED.o \
-Pong.o \
+pong.o \
 SPI.o \
-Usart_Driver.o \
-Utilities.o
+test.o \
+USART.o \
+utilities.o
 
 OBJS_AS_ARGS +=  \
 ADC.o \
 CAN.o \
 CAN_joystick.o \
+fsm.o \
 joystick.o \
 main.o \
 MCP2515.o \
-Memory.o \
-fsm.o \
+memory.o \
 OLED.o \
-Pong.o \
+pong.o \
 SPI.o \
-Usart_Driver.o \
-Utilities.o
+test.o \
+USART.o \
+utilities.o
 
 C_DEPS +=  \
 ADC.d \
 CAN.d \
 CAN_joystick.d \
+fsm.d \
 joystick.d \
 main.d \
 MCP2515.d \
-Memory.d \
-fsm.d \
+memory.d \
 OLED.d \
-Pong.d \
+pong.d \
 SPI.d \
-Usart_Driver.d \
-Utilities.d
+test.d \
+USART.d \
+utilities.d
 
 C_DEPS_AS_ARGS +=  \
 ADC.d \
 CAN.d \
 CAN_joystick.d \
+fsm.d \
 joystick.d \
 main.d \
 MCP2515.d \
-Memory.d \
-fsm.d \
+memory.d \
 OLED.d \
-Pong.d \
+pong.d \
 SPI.d \
-Usart_Driver.d \
-Utilities.d
+test.d \
+USART.d \
+utilities.d
 
-OUTPUT_FILE_PATH +=MarPerAnd.elf
+OUTPUT_FILE_PATH +=Node1.elf
 
-OUTPUT_FILE_PATH_AS_ARGS +=MarPerAnd.elf
+OUTPUT_FILE_PATH_AS_ARGS +=Node1.elf
 
 ADDITIONAL_DEPENDENCIES:=
 
@@ -132,6 +137,8 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+
+
 
 
 
@@ -191,13 +198,13 @@ all: $(OUTPUT_FILE_PATH) $(ADDITIONAL_DEPENDENCIES)
 $(OUTPUT_FILE_PATH): $(OBJS) $(USER_OBJS) $(OUTPUT_FILE_DEP) $(LIB_DEP) $(LINKER_SCRIPT_DEP)
 	@echo Building target: $@
 	@echo Invoking: AVR/GNU Linker : 4.8.1
-	$(QUOTE)C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE) -o$(OUTPUT_FILE_PATH_AS_ARGS) $(OBJS_AS_ARGS) $(USER_OBJS) $(LIBS) -Wl,-Map="MarPerAnd.map" -Wl,--start-group -Wl,-lm  -Wl,--end-group -Wl,--gc-sections -mmcu=atmega162 -Wl,--relax  
+	$(QUOTE)C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE) -o$(OUTPUT_FILE_PATH_AS_ARGS) $(OBJS_AS_ARGS) $(USER_OBJS) $(LIBS) -Wl,-Map="Node1.map" -Wl,--start-group -Wl,-lm  -Wl,--end-group -Wl,--gc-sections -mmcu=atmega162 -Wl,--relax  
 	@echo Finished building target: $@
-	"C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-objcopy.exe" -O ihex -R .eeprom -R .fuse -R .lock -R .signature -R .user_signatures  "MarPerAnd.elf" "MarPerAnd.hex"
-	"C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-objcopy.exe" -j .eeprom  --set-section-flags=.eeprom=alloc,load --change-section-lma .eeprom=0  --no-change-warnings -O ihex "MarPerAnd.elf" "MarPerAnd.eep" || exit 0
-	"C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-objdump.exe" -h -S "MarPerAnd.elf" > "MarPerAnd.lss"
-	"C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-objcopy.exe" -O srec -R .eeprom -R .fuse -R .lock -R .signature -R .user_signatures "MarPerAnd.elf" "MarPerAnd.srec"
-	"C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-size.exe" "MarPerAnd.elf"
+	"C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-objcopy.exe" -O ihex -R .eeprom -R .fuse -R .lock -R .signature -R .user_signatures  "Node1.elf" "Node1.hex"
+	"C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-objcopy.exe" -j .eeprom  --set-section-flags=.eeprom=alloc,load --change-section-lma .eeprom=0  --no-change-warnings -O ihex "Node1.elf" "Node1.eep" || exit 0
+	"C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-objdump.exe" -h -S "Node1.elf" > "Node1.lss"
+	"C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-objcopy.exe" -O srec -R .eeprom -R .fuse -R .lock -R .signature -R .user_signatures "Node1.elf" "Node1.srec"
+	"C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-size.exe" "Node1.elf"
 	
 	
 
@@ -209,5 +216,5 @@ $(OUTPUT_FILE_PATH): $(OBJS) $(USER_OBJS) $(OUTPUT_FILE_DEP) $(LIB_DEP) $(LINKER
 clean:
 	-$(RM) $(OBJS_AS_ARGS) $(EXECUTABLES)  
 	-$(RM) $(C_DEPS_AS_ARGS)   
-	rm -rf "MarPerAnd.elf" "MarPerAnd.a" "MarPerAnd.hex" "MarPerAnd.lss" "MarPerAnd.eep" "MarPerAnd.map" "MarPerAnd.srec" "MarPerAnd.usersignatures"
+	rm -rf "Node1.elf" "Node1.a" "Node1.hex" "Node1.lss" "Node1.eep" "Node1.map" "Node1.srec" "Node1.usersignatures"
 	
